[package]
name = "nh"
version = "4.0.0-beta.12"
edition = "2021"
license = "EUPL-1.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.10"
chrono = "0.4.40"
clap = { version = "4.5", features = [
    "cargo",
    "color",
    "derive",
    "env",
    "unstable-styles",
] }
clap_builder = "4.5.36"
clap_complete = "4.5.47"
clean-path = "0.2"
color-eyre = { version = "0.6.3", default-features = false, features = [
    "track-caller",
] }
dialoguer = { version = "0.11.0", default-features = false }
elasticsearch-dsl = "0.4.23"
hostname = "0.4"
humantime = "2.2.0"
nix = { version = "0.29.0", default-features = false, features = [
    "fs",
    "user",
] }
once_cell = "1.21.3"
owo-colors = "4.2.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["rustls-tls", "blocking", "json"], default-features = false }
semver = "1.0.26"
serde = { version = "1.0.219", features = [
    "derive",
] }
serde_json = "1.0.140"
subprocess = "0.2"
supports-hyperlinks = "3.1.0"
tempfile = "3.19.1"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
thiserror = "2.0"
timeago = { version = "0.4.2", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "registry",
    "std"
] }
uzers = { version = "0.12.1", default-features = false }

[target.'cfg(target_os="macos")'.dependencies]
system-configuration = "0.6.1"

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.19.1"
